--- a/views/login.html
+++ b/views/login.html
@@ -9,13 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/normalize.css" />
     <script src="https://kit.fontawesome.com/e8df24fbbe.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles-rama.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
     <header class="main-header">
         <div class="arriba">
-            <h3>¡¡3 , 6 y 12 CUOTAS SIN INTERES!!</h3>
+            <h3>¡3 , 6 y 12 CUOTAS SIN INTERES!</h3>
         </div>
         <div class="header-top-bar">
             <div class="contenedor-menu">
@@ -74,8 +74,6 @@
             </form>
         </div>
 
-      
-
         <div class="new-account">
             <p class="italic center re-size">¿Todavía no tienes cuenta?</p>
             <a href="/register">
@@ -85,32 +83,35 @@
             </a>
         </div>
 
+        <div class="newsletter">
+            <form action="/" method="POST" class="newsletter">
+                <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
+                <div class="control-formulario">
+                    <input type="email" name="email" id="email" placeholder="Ingresá tu email" class="control">
+                    <button type="submit" class="boton-suscribe">SUSCRIBIRME</button>
+                </div>
+            </form>
+        </div>
     </main>
 
     <footer>
+
         <section>
+
             <div class="main-footer">
                 <article class="footer-article">
-                    <h4 class="titulo">
-                        INSTITUCIONAL<i class="fas fa-chevron-down none2"></i>
-                    </h4>
-                    <div class="italic center gris-oscuro padding">
+                    <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none3"></i></h4>
+                    <div class="italic center padding">
                         <ul class="footer">
                             <li><a href="#" class="linkfooter">Quienes somos</a></li>
-                            <li>
-                                <a href="#" class="linkfooter">Politicas de privacidad</a>
-                            </li>
-                            <li>
-                                <a href="#" class="linkfooter">Terminos y condiciones</a>
-                            </li>
+                            <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
+                            <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
                         </ul>
                     </div>
                 </article>
                 <article class="footer-article">
-                    <h4 class="titulo">
-                        AYUDA<i class="fas fa-chevron-down none2"></i>
-                    </h4>
-                    <div class="italic center gris-oscuro padding">
+                    <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none3"></i></h4>
+                    <div class="italic center padding">
                         <ul class="footer">
                             <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
                             <li><a href="#" class="linkfooter">Sucursales</a></li>
@@ -121,17 +122,12 @@
                     </div>
                 </article>
                 <article class="footer-article">
-                    <h4 class="titulo">
-                        CONTACTO<i class="fas fa-chevron-down icon-title none2"></i>
-                    </h4>
+                    <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none3"></i></h4>
                     <div class="italic">
                         <ul class="footer">
                             <li><a href="" class="linkfooter">0800-888-8888</a></li>
-                            <li>
-                                <a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a>
-                            </li>
-                            <li>
-                                <a href="#" class="linkfooter"><i class="far fa-envelope"></i>Envianos un mensaje</a>
+                            <li><a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
+                            <li><a href="#" class="linkfooter"><i class="far fa-envelope "></i>Envianos un mensaje</a>
                             </li>
                         </ul>
                     </div>
@@ -141,9 +137,7 @@
             <br />
 
             <div>
-                <p class="gris-oscuro font-size center1">
-                    Copyright © 2020 KICKS S.R.L.
-                </p>
+                <p class="center1">Copyright © 2020 KICKS S.R.L.</p>
                 <div class="redes">
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-instagram-square"></i>
@@ -151,6 +145,7 @@
                 </div>
             </div>
         </section>
+
     </footer>
 </body>
 
