--- a/views/register.html
+++ b/views/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/normalize.css">
     <script src="https://kit.fontawesome.com/e8df24fbbe.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/styles-prueba.css">   
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <header class="main-header">
         <div class="arriba">
@@ -45,63 +47,71 @@
 
 
     </header>
-    
+
     <main>
-        <h2 class="titulo-registro">Registrarme</h2>
+        <div class="login-bar1">
+        <h2 class="titulo-registro1">Registrarme</h2>
         <form action="/register" method="POST" class="register-form">
-         <div class="register-container"> 
-            <h3 class="datos-personales">DATOS PERSONALES</h3>
-            <div>
-            <input type="text" name="nombre" placeholder="NOMBRE" class="ingreso" required>
+            <div class="register-container">
+                <h3 class="datos-personales">DATOS PERSONALES</h3>
+                <div>
+                    <input type="text" name="nombre" placeholder="NOMBRE" class="ingreso" required>
+                </div>
+                <div>
+                    <input type="text" name="apellido" placeholder="APELLIDO" class="ingreso" required>
+                </div>
+                <div>
+                    <label for="fecha-nacimiento">FECHA DE NACIMIENTO</label>
+                    <input type="date" name="fecha-nacimiento" id="fecha-nacimiento" class="ingreso" required>
+                </div>
+                <div>
+                    <label>GENERO</label>
+                </div>
+                <div class="genero">
+                    <label for="masculino" class="label-sexo">MASCULINO</label>
+                    <input type="radio" name="sexo" value="masculino" id="masculino" required>
+                    <label for="femenino" class="label-sexo">FEMENINO</label>
+                    <input type="radio" name="sexo" value="femenino" id="femenino" required>
+                    <label for="otros" class="label-sexo">OTROS</label>
+                    <input type="radio" name="sexo" value="otros" id="otros" required>
+                </div>
             </div>
-            <div>
-            <input type="text" name="apellido" placeholder="APELLIDO" class="ingreso" required>
-            </div> 
-            <div>
-            <label for="fecha-nacimiento">FECHA DE NACIMIENTO</label>
-            <input type="date" name="fecha-nacimiento" id="fecha-nacimiento" class="ingreso" required>
+            <div class="register-container">
+                <h3 class="info-cuenta">SOBRE TU CUENTA</h3>
+                <input type="email" name="email" placeholder="EMAIL" class="ingreso" required>
+                <input type="password" name="password" placeholder="CONTRASEÑA" class="ingreso" required>
+                <i class="fas fa-eye-slash"></i>
+                <input type="password" name="password-confirm" placeholder="CONFIRMAR CONTRASEÑA" class="ingreso"
+                    required>
+                <i class="fas fa-eye-slash"></i>
             </div>
-            <div>
-            <label>GENERO</label>
-            </div>
-            <div class="genero">
-            <label for="masculino" class="label-sexo">MASCULINO</label>
-            <input type="radio" name="sexo" value="masculino" id="masculino" required>
-            <label for="femenino" class="label-sexo">FEMENINO</label>
-            <input type="radio" name="sexo" value="femenino" id="femenino" required>
-            <label for="otros" class="label-sexo">OTROS</label>
-            <input type="radio" name="sexo" value="otros" id="otros" required>
-            </div>
-         </div>
-         <div class="register-container"> 
-            <h3 class="info-cuenta">SOBRE TU CUENTA</h3>
-            <input type="email" name="email" placeholder="EMAIL" class="ingreso" required>
-            <input type="password" name="password" placeholder="CONTRASEÑA" class="ingreso" required>
-            <i class="fas fa-eye-slash"></i>
-            <input type="password" name="password-confirm" placeholder="CONFIRMAR CONTRASEÑA" class="ingreso" required>
-            <i class="fas fa-eye-slash"></i>
-         </div>
             <hr>
-         <div class="register-container-end"> 
-            <input type="checkbox" name="terminos" value="terminos" id="terminos" required>
-            <label for="terminos">ACEPTO LAS POLITICAS DE PRIVACIDAD Y LOS TERMINOS Y CONDICIONES</label>
-            <input type="checkbox" name="ofertas" value="ofertas" id="ofertas">
-            <label for="ofertas">DESEO RECIBIR OFERTAS POR EMAIL</label>
-            <button type="submit" class="submit-button">CREAR CUENTA</button>
-         </div>
+            <div class="register-container-end">
+                <input type="checkbox" name="terminos" value="terminos" id="terminos" required>
+                <label for="terminos">ACEPTO LAS POLITICAS DE PRIVACIDAD Y LOS TERMINOS Y CONDICIONES</label>
+                <input type="checkbox" name="ofertas" value="ofertas" id="ofertas">
+                <label for="ofertas">DESEO RECIBIR OFERTAS POR EMAIL</label>
+                <button type="submit" class="submit-button1">CREAR CUENTA</button>
+            </div>
         </form>
-
-
+    </div>
+        <div class="newsletter">
+            <form action="/" method="POST" class="newsletter">
+                <h3 class="newsletter-title">SUSCRIBITE AL NEWSLETTER</h3>
+                <div class="control-formulario">
+                    <input type="email" name="email" id="email" placeholder="Ingresá tu email" class="control">
+                    <button type="submit" class="boton-suscribe">SUSCRIBIRME</button>
+                </div>
+            </form>
+        </div>
     </main>
-
     <footer>
-
         <section>
 
             <div class="main-footer">
                 <article class="footer-article">
-                    <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none2"></i></h4>
-                    <div class="italic center gris-oscuro padding">
+                    <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none3"></i></h4>
+                    <div class="italic center padding">
                         <ul class="footer">
                             <li><a href="#" class="linkfooter">Quienes somos</a></li>
                             <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
@@ -110,8 +120,8 @@
                     </div>
                 </article>
                 <article class="footer-article">
-                    <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none2"></i></h4>
-                    <div class="italic center gris-oscuro padding">
+                    <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none3"></i></h4>
+                    <div class="italic center padding">
                         <ul class="footer">
                             <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
                             <li><a href="#" class="linkfooter">Sucursales</a></li>
@@ -122,7 +132,7 @@
                     </div>
                 </article>
                 <article class="footer-article">
-                    <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none2"></i></h4>
+                    <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none3"></i></h4>
                     <div class="italic">
                         <ul class="footer">
                             <li><a href="" class="linkfooter">0800-888-8888</a></li>
@@ -137,7 +147,7 @@
             <br />
 
             <div>
-                <p class="gris-oscuro font-size center1 ">Copyright © 2020 KICKS S.R.L.</p>
+                <p class="center1">Copyright © 2020 KICKS S.R.L.</p>
                 <div class="redes">
                     <i class="fab fa-facebook-square"></i>
                     <i class="fab fa-instagram-square"></i>
@@ -147,7 +157,8 @@
         </section>
 
     </footer>
-    
-    
+
+
 </body>
+
 </html>
