--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -118,7 +118,7 @@
 
 
         <section class="opciones">
-            <h3>Otros productos que podrian interesarte...</h3>
+            <h3 class="margin-products">Otros productos que podrian interesarte...</h3>
             <div class="destacados">
                 <article class="recomendado-article a1">
                     <img src="/images/adidas2.png" alt="ADIDAS NITE JOGGER 3M NAVY">
