Separo la carpeta views en products y users

--- a/src/views/products/productCart.html
+++ b/src/views/products/productCart.html
@@ -39,7 +39,7 @@
 
     <main>
         <div class="encabezado-carrito">
-            <h2>MI CARRITO</h2>
+            <h3>MI CARRITO</h3>
             <a href="/">ELEGIR MÁS PRODUCTOS</a>
         </div>
         <section class="elementos-carrito">
@@ -107,7 +107,7 @@
 
         <section class="recomendados">
             <article class="recomendado-article a1">
-                <a href="/productDetail"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
+                <a href="/productos/productDetail"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
                 <div class="contenedor-descripcion">
                     <div>ADIDAS OZWEEGO ORANGE (YOUTH)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
