--- a/src/views/users/register.html
+++ b/src/views/users/register.html
@@ -55,10 +55,10 @@
             <div class="register-container">
                 <h3 class="datos-personales">DATOS PERSONALES</h3>
                 <div>
-                    <input type="text" name="nombre" placeholder="NOMBRE" class="ingreso" required>
+                    <input type="text" name="nombre" placeholder="Nombre..." class="ingreso" required>
                 </div>
                 <div>
-                    <input type="text" name="apellido" placeholder="APELLIDO" class="ingreso" required>
+                    <input type="text" name="apellido" placeholder="Apellido..." class="ingreso" required>
                 </div>
                 <div>
                     <label for="fecha-nacimiento">FECHA DE NACIMIENTO</label>
@@ -68,30 +68,30 @@
                     <label>GENERO</label>
                 </div>
                 <div class="genero">
-                    <label for="masculino" class="label-sexo">MASCULINO</label>
+                    <label for="masculino" class="label-sexo">Masculino</label>
                     <input type="radio" name="sexo" value="masculino" id="masculino" required>
-                    <label for="femenino" class="label-sexo">FEMENINO</label>
+                    <label for="femenino" class="label-sexo">Femenino</label>
                     <input type="radio" name="sexo" value="femenino" id="femenino" required>
-                    <label for="otros" class="label-sexo">OTROS</label>
+                    <label for="otros" class="label-sexo">Otros</label>
                     <input type="radio" name="sexo" value="otros" id="otros" required>
                 </div>
             </div>
             <div class="register-container">
                 <h3 class="info-cuenta">SOBRE TU CUENTA</h3>
-                <input type="email" name="email" placeholder="EMAIL" class="ingreso" required>
-                <input type="password" name="password" placeholder="CONTRASEÑA" class="ingreso" required>
+                <input type="email" name="email" placeholder="Email..." class="ingreso" required>
+                <input type="password" name="password" placeholder="Contraseña..." class="ingreso" required>
                 <i class="fas fa-eye-slash"></i>
-                <input type="password" name="password-confirm" placeholder="CONFIRMAR CONTRASEÑA" class="ingreso"
+                <input type="password" name="password-confirm" placeholder="Confirmar contraseña..." class="ingreso"
                     required>
                 <i class="fas fa-eye-slash"></i>
             </div>
             <hr>
             <div class="register-container-end">
                 <input type="checkbox" name="terminos" value="terminos" id="terminos" required>
-                <label for="terminos">ACEPTO LAS POLITICAS DE PRIVACIDAD Y LOS TERMINOS Y CONDICIONES</label>
+                <label for="terminos">Acepto las politicas de privacidad y los terminos y condiciones</label>
                 <input type="checkbox" name="ofertas" value="ofertas" id="ofertas">
-                <label for="ofertas">DESEO RECIBIR OFERTAS POR EMAIL</label>
-                <button type="submit" class="submit-button1">CREAR CUENTA</button>
+                <label for="ofertas">Deseo recibir ofertas por email</label>
+                <button type="submit" class="submit-button1">Crear cuenta</button>
             </div>
         </form>
     </div>
