--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
         </div>
         <section class="destacados">
             <article class="recomendado-article a1">
-                <a href="/productos/productDetail"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
+                <a href="/productos/productDetail/3"><img src="/images/adidas1.png" alt="ADIDAS OZWEEGO ORANGE (YOUTH)"></a>
                 <div class="contenedor-descripcion">
                     <div>ADIDAS OZWEEGO ORANGE (YOUTH)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -29,7 +29,7 @@
                 </div>
             </article>
             <article class="recomendado-article a2">
-                <img src="/images/puma3.png" alt="PUMA FUTURE RIDER NES">
+                <a href="/productos/productDetail/2"><img src="/images/puma3.png" alt="PUMA FUTURE RIDER NES"></a>
                 <div class="contenedor-descripcion">
                     <div>PUMA FUTURE RIDER NES (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -38,7 +38,7 @@
                 </div>
             </article>
             <article class="recomendado-article a3">
-                <img src="/images/nike3.png" alt="NIKE AIR MAX 90 INFRARED (2020)">
+                <a href="/productos/productDetail/4"><img src="/images/nike3.png" alt="NIKE AIR MAX 90 INFRARED (2020)"></a>
                 <div class="contenedor-descripcion">
                     <div>NIKE AIR MAX 90 INFRARED (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
@@ -47,7 +47,7 @@
                 </div>
             </article>
             <article class="recomendado-article a4">
-                <img src="/images/new-balance4.png" alt="NIKE AIR MAX 90 INFRARED (2020)">
+                <a href="/productos/productDetail/5"><img src="/images/new-balance4.png" alt="NEW BALANCE 1300 LEVI´S"></a>
                 <div class="contenedor-descripcion">
                     <div>NIKE AIR MAX 90 INFRARED (2020)</div>
                     <i class="fas fa-arrow-circle-left izarrow"></i>
